--- a/src/CSS/nav.css
+++ b/src/CSS/nav.css
@@ -1,25 +1,31 @@
 /* Header style */
-header{
+header {
     background-image: url(/assets/images/navbar-background.jpg);
     background-size: cover;
     background-repeat: none;
     background-position: center;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
-nav{
+
+nav {
     font-size: 20px;
 }
-nav .menu{
+
+nav .menu {
     list-style: none;
     text-transform: capitalize;
     width: 40%;
 }
-nav .logo{
+
+nav .logo {
     width: 20%;
     text-align: center;
 }
-nav .logo img{
-    width: 100px;
+
+nav .logo img {
+    width: 75px;
 }
-nav .signin_signup{
+
+nav .signin_signup {
     width: 20%;
 }
