--- a/src/CSS/shop.css
+++ b/src/CSS/shop.css
@@ -1,17 +1,20 @@
 /* Shop page style */
 /* Search style */
-.search-form .input{
+.search-form .input {
     border: .3px solid #000;
     border-radius: 25px;
     min-height: 50px;
 }
-.search-form .search-input{
+
+.search-form .search-input {
     border: none;
     width: 95%;
 }
-.search-form .search-input:focus{
+
+.search-form .search-input:focus {
     outline: none;
 }
+
 /* Product list */
 .render-product-list {
     width: 100%;
@@ -36,11 +39,12 @@
     border-radius: 8px 8px 0 0;
 }
 
-.product-item h5, .product-item p {
+.product-item h5,
+.product-item p {
     text-align: center;
 }
 
-.product-item p{
+.product-item p {
     margin: 8px 0 0 0;
 }
 
@@ -49,12 +53,30 @@
     margin: 0 auto;
 }
 
+.product-item .add-cart {
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: inherit;
+    font-size: 30px;
+    width: 100%;
+    border-radius: 0 0 8px 8px;
+    transition: opacity .7s;
+}
+
 /* Hover style */
-.product-item:hover{
+.product-item .add-cart:hover{
+    background-color: red;
+    opacity: .5;
+    color: white;
+}
+
+.product-item:hover {
     cursor: pointer;
     position: relative;
     top: -5px;
 }
-.product-item:hover .img{
+
+.product-item:hover .img {
     opacity: .7;
 }
