--- a/src/CSS/allstyle.css
+++ b/src/CSS/allstyle.css
@@ -123,7 +123,7 @@ main {
 
 /* Background */
 .background {
-    background-image: url(./assets/images/background.jpg);
+    background-image: url(/assets/images/background.jpg);
     background-position: center;
     background-size: cover;
     width: 100vw;
