--- a/src/CSS/contact.css
+++ b/src/CSS/contact.css
@@ -1,4 +1,33 @@
 /* Contact style */
-.left-infor img{
+
+.content {
+    border-radius: 8px;
+    font-size: 20px;
+    margin: 20vh auto;
+    height: 60vh;
+    padding: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.left-infor,
+.right-form {
+    width: 45%;
+}
+
+.left-infor img {
     border-radius: 50%;
+    width: 25%
+}
+
+.text-input {
+    border: none;
+    border-bottom: 1px black solid;
+}
+
+.text-input:focus {
+    outline: none;
+}
+
+.subject {
+    width: 100%;
 }
